feat: init new backend using springboot

--- a/.env.dist
+++ b/.env.dist
@@ -1,8 +1,12 @@
 # Application
-PORT=3000 # Default port
-NODE_ENV=development|production
+SERVER_PORT=3568
 
 # Database
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-POSTGRES_DB=
+DB_URL=jdbc:postgresql://localhost:5435/mohistmc_website
+DB_NAME=mohistmc_website
+DB_USERNAME=mohistmc
+DB_PASSWORD=replace_here
+
+# GitHub
+GITHUB_USERNAME=replace_here
+GITHUB_TOKEN=replace_here
