--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,31 +3,13 @@ services:
     image: postgres:latest
     container_name: postgres
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${DB_USERNAME}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: ${DB_NAME}
     ports:
-      - "5432:5432"
+      - "5435:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-
-  nestjs:
-    image: node:latest
-    container_name: nestjs
-    working_dir: /app
-    volumes:
-      - .:/app
-    command: sh -c "if [ \"${NODE_ENV}\" = \"production\" ]; then npm install && npm run start; fi"
-    environment:
-      - PORT=${PORT}
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_DB=${POSTGRES_DB}
-      - NODE_ENV=${NODE_ENV}
-    ports:
-      - "${PORT}:${PORT}"
-    depends_on:
-      - postgres
 
 volumes:
   postgres_data:
