--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ dependencies {
 	implementation 'org.flywaydb:flyway-database-postgresql'
 	implementation 'org.kohsuke:github-api:2.0-rc.3'
 	implementation 'org.mapstruct:mapstruct:1.6.3'
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.8'
 
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.postgresql:postgresql'
