--- a/deployment/env/.env.production
+++ b/deployment/env/.env.production
@@ -3,3 +3,7 @@ ANSIBLE_USER=ansible
 APP_EXTERNAL_PORT=24001
 DB_EXTERNAL_PORT=5435
 DEPLOY_PRIVATE_SSH_KEYS=SSH_PRIVATE_KEY_VM_ORACLE
+
+SERVER_PORT=3568
+DB_NAME=mohistmc_website
+DB_USERNAME=mohistmc
