--- a/.env.dev
+++ b/.env.dev
@@ -5,8 +5,8 @@ SERVER_PORT=3568
 DB_URL=jdbc:postgresql://localhost:5435/mohistmc_website
 DB_NAME=mohistmc_website
 DB_USERNAME=mohistmc
-DB_PASSWORD=replace_here
+DB_PASSWORD=password
 
 # GitHub
-GITHUB_USERNAME=replace_here
-GITHUB_TOKEN=replace_here
+CREDENTIALS_GITHUB_USERNAME=
+CREDENTIALS_GITHUB_TOKEN=
