--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,8 @@
-spring.application.name=mohistmc-website-api
-spring.config.import=optional:file:.env[.properties]
+spring.application.name=mohistmc-rest-api
+spring.config.import=optional:file:.env.dev
 server.port=${SERVER_PORT:8080}
 #logging.level.root=DEBUG
+
 ############
 # DATABASE #
 ############
@@ -9,11 +10,13 @@ spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
+
 ############
 ## GITHUB ##
 ############
 github.username=${GITHUB_USERNAME}
 github.token=${GITHUB_TOKEN}
+
 ############
 ## BUILDS ##
 ############
