--- a/.env.dev
+++ b/.env.dev
@@ -2,7 +2,7 @@
 SERVER_PORT=3568
 
 # Database
-DB_URL=jdbc:postgresql://localhost:5435/mohistmc_website
+DB_HOST=localhost:5435
 DB_NAME=mohistmc_website
 DB_USERNAME=mohistmc
 DB_PASSWORD=password
