--- a/deployment/docker/compose-deploy.yml
+++ b/deployment/docker/compose-deploy.yml
@@ -25,6 +25,8 @@ services:
     environment:
       DB_PASSWORD: ${DB_PASSWORD}
       DB_URL: jdbc:postgresql://mohistmc-db-v3-${ENV}/mohistmc_website
+      GITHUB_TOKEN: ${CREDENTIALS_GITHUB_TOKEN}
+      GITHUB_USERNAME: ${CREDENTIALS_GITHUB_USERNAME}
     ports:
       - "${APP_EXTERNAL_PORT}:3568"
     volumes:
