--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,12 +1,12 @@
 spring.application.name=mohistmc-rest-api
-spring.config.import=optional:file:.env.dev
+spring.config.import=optional:file:.env.dev[.properties]
 server.port=${SERVER_PORT:8080}
 #logging.level.root=DEBUG
 
 ############
 # DATABASE #
 ############
-spring.datasource.url=${DB_URL}
+spring.datasource.url=jdbc:postgresql://${DB_HOST}/${DB_NAME}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -14,8 +14,8 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 ############
 ## GITHUB ##
 ############
-github.username=${GITHUB_USERNAME}
-github.token=${GITHUB_TOKEN}
+github.username=${GITHUB_USERNAME:}
+github.token=${GITHUB_TOKEN:}
 
 ############
 ## BUILDS ##
