fix: set server port in container

--- a/deployment/docker/compose-deploy.yml
+++ b/deployment/docker/compose-deploy.yml
@@ -29,6 +29,7 @@ services:
       DB_PASSWORD: ${DB_PASSWORD}
       GITHUB_TOKEN: ${CREDENTIALS_GITHUB_TOKEN}
       GITHUB_USERNAME: ${CREDENTIALS_GITHUB_USERNAME}
+      SERVER_PORT: ${SERVER_PORT}
     ports:
       - "${APP_EXTERNAL_PORT}:3568"
     volumes:
