chore: update swagger endpoints

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,11 @@ github.token=${GITHUB_TOKEN}
 ## BUILDS ##
 ############
 builds.path=/var/mohistmc/builds
+
+#############
+## SWAGGER ##
+#############
+springdoc.api-docs.path=/docs
+springdoc.swagger-ui.path=/docs-ui
+springdoc.swagger-ui.url=/docs
+springdoc.swagger-ui.disable-swagger-default-url=true
