--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,7 +2,6 @@ spring.application.name=mohistmc-rest-api
 spring.config.import=optional:file:.env.dev[.properties]
 server.port=${SERVER_PORT:8080}
 #logging.level.root=DEBUG
-
 ############
 # DATABASE #
 ############
@@ -10,13 +9,11 @@ spring.datasource.url=jdbc:postgresql://${DB_HOST}/${DB_NAME}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
-
 ############
 ## GITHUB ##
 ############
-github.username=${GITHUB_USERNAME:}
-github.token=${GITHUB_TOKEN:}
-
+github.username=${CREDENTIALS_GITHUB_USERNAME:}
+github.token=${CREDENTIALS_GITHUB_TOKEN:}
 ############
 ## BUILDS ##
 ############
