--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 spring.application.name=mohistmc-rest-api
 server.port=${SERVER_PORT:8080}
-
 ############
 # DATABASE #
 ############
@@ -8,18 +7,16 @@ spring.datasource.url=jdbc:postgresql://${DB_HOST}/${DB_NAME}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
-
 ############
 ## GITHUB ##
 ############
 github.username=${GITHUB_USERNAME}
 github.token=${GITHUB_TOKEN}
-
+github.stats-repositories=MohistMC/Mohist,MohistMC/Banner
 ############
 ## BUILDS ##
 ############
 builds.path=/var/mohistmc/builds
-
 #############
 ## SWAGGER ##
 #############
@@ -27,3 +24,7 @@ springdoc.api-docs.path=/docs
 springdoc.swagger-ui.path=/docs-ui
 springdoc.swagger-ui.url=/docs
 springdoc.swagger-ui.disable-swagger-default-url=true
+#############
+## BSTATS  ##
+#############
+bstats.servers=6762
