--- a/build.gradle
+++ b/build.gradle
@@ -66,7 +66,7 @@ def loadEnv() {
 def env = loadEnv()
 
 flyway {
-	url = env['DB_URL']
+	url = 'jdbc:postgresql://' + env['DB_HOST'] + '/' + env['DB_NAME']
 	user = env['DB_USERNAME']
 	password = env['DB_PASSWORD']
 	baselineOnMigrate = true
