fix: set swagger api url

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,7 @@
 spring.application.name=mohistmc-rest-api
 spring.config.import=optional:file:.env.dev[.properties]
 server.port=${SERVER_PORT:8080}
+api.server.url=http://localhost:${SERVER_PORT:8080}
 #logging.level.root=DEBUG
 
 ############
