--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=mohistmc-rest-api
 server.port=${SERVER_PORT:8080}
+api.server.url=https://api.mohistmc.com
 
 ############
 # DATABASE #
