--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 ############
 github.username=${GITHUB_USERNAME}
 github.token=${GITHUB_TOKEN}
-github.stats-repositories=MohistMC/Mohist,MohistMC/Banner
+github.stats-repositories=MohistMC/Mohist,MohistMC/Banner,MohistMC/Youer
 
 ############
 ## BUILDS ##
