--- a/.deployment/env/.env.production
+++ b/.deployment/env/.env.production
@@ -1,5 +1,4 @@
-HOST=$PRODUCTION_HOST
-ANSIBLE_USER=ansible
+USER=ansible
 APP_EXTERNAL_PORT=24001
 DB_EXTERNAL_PORT=5435
 DEPLOY_PRIVATE_SSH_KEYS=SSH_PRIVATE_KEY_VM_ORACLE
